--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!doctype html><html lang="en">
+<!doctype html>
+<html lang="en">
   <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
@@ -12,4 +13,5 @@
 <body onload="postlog()">
   <noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div>
   <script type="text/javascript" src="https://null-point-sys.github.io/devbdd/static/js/main.c5bcc82e.js"></script>
-</body></html>
+</body>
+</html>
