--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
    <title>DevCast</title><script src="https://code.jquery.com/jquery-1.9.1.js"></script>
    <script>function postlog(){$.ajax({url:"/log",method:"POST",data:{user_lat:1,user_lon:2},success:function(o){console.log("ok")},error:function(o){console.log("Failed")}})}</script>
-   <link href="https://refactorize.github.io/lab/static/css/main.44556d94.css" rel="stylesheet">
+   <link href="https://refactorii.github.io/lab/static/css/main.44556d94.css" rel="stylesheet">
   </head>
 <body onload="postlog()">
   <noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div>
-  <script type="text/javascript" src="https://refactorize.github.io/lab/static/js/main.3ca69429.js"></script>
+  <script type="text/javascript" src="https://refactorii.github.io/lab/static/js/main.3ca69429.js"></script>
 </body>
 </html>
